# Personal-Productivity-Dashboard

./: .env  BACK END main server file (index.js)  BACK END routes and controllers  Data Vizualization  Database Schema  FRONT END App.js (Main Component)  FRONT END GoalSetting.js (Goal Setting Component)  FRONT END Navbar.js (Navigation Component)  FRONT END TaskManagement.js (Task Management Component)  LICENSE.md  OTHER necessary validations  Project-Outline.md  README.md  User Auth
.github/workflows/: ci.yml
BACK END "routes/: BACK END  routes and controllers
backend/python/: cli.py  requirements.txt
backend/python/monitor/: cost_estimator.py  performance.py
backend/python/quantum/: cirq_backend.py  pennylane_backend.py  qiskit_backend.py
backend/python/workflow/: scheduler.py
backend/rust/: Cargo.toml
backend/rust/src/: lib.rs  scheduler.rs
deploy/: Dockerfile  aws_config.yml  kubernetes.yml
frontend/src/components/: Dashboard.js  WorkflowDesigner.js
tests/frontend/: test_dashboard.js  test_designer.js
tests/rust/tests/: scheduler.rs
